--- a/src/CZ.Azure.FileExchange/Properties/launchSettings.json
+++ b/src/CZ.Azure.FileExchange/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Cz.Tools.FileExchange": {
+    "CZ.Azure.FileExchange": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
