--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: "./src/CZ.Azure.FileExchange/" # App source code path
           api_location: "./src/CZ.Azure.FileExchange.Api/" # Api source code path - optional
-          output_location: "bin/Debug/net6.0/publish/wwwroot/" # Built app content directory - optional
+          output_location: "wwwroot/" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
 
   close_pull_request_job:
