--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,12 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }}
           action: "close"
+  compile_bicep:
+    runs-on: 'ubuntu-latest'
+    name: compile main bicep
+    steps:
+      - name: compile bicep
+        uses: Azure/bicep-build-action@v1.0.0
+        with:
+          bicepFilePath: "main.bicep"
+      
