--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
     runs-on: 'ubuntu-latest'
     name: compile main bicep
     steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: compile bicep
         uses: Azure/bicep-build-action@v1.0.0
         with:
