--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,8 @@
 	"extensions": [
 		"ms-dotnettools.csharp",
 		"ms-azuretools.vscode-bicep",
-		"cschleiden.vscode-github-actions"
+		"cschleiden.vscode-github-actions",
+		"ms-azure-devops.azure-pipelines"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
