--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,7 @@ stages:
         projects: |
           $(workingDirectory)/src/CZ.Azure.FileExchange/*.csproj
         arguments: --output fe/ --configuration Release
+        zipAfterPublish: false
     - task: DotNetCoreCLI@2
       displayName: Publish api
       inputs:
@@ -49,6 +50,7 @@ stages:
         projects: |
           $(workingDirectory)/src/CZ.Azure.FileExchange.Api/*.csproj
         arguments: --output api/ --configuration Release
+        zipAfterPublish: false
     - script: 'az bicep build --file $(workingDirectory)/main.bicep --outfile $(Build.ArtifactStagingDirectory)/azuredeploy.json'
       displayName: build bicep file
     - task: ArchiveFiles@2
