try to fix publishing

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
       inputs:
         command: 'publish'
         projects: |
-          $(workingDirectory)/src/CZ.Azure.FileExchange/*.csproj
+          $(workingDirectory)/src/CZ.Azure.FileExchange/CZ.Azure.FileExchange.csproj
         arguments: --output fe/ --configuration Release
         zipAfterPublish: false
     - task: DotNetCoreCLI@2
@@ -48,7 +48,7 @@ stages:
       inputs:
         command: 'publish'
         projects: |
-          $(workingDirectory)/src/CZ.Azure.FileExchange.Api/*.csproj
+          $(workingDirectory)/src/CZ.Azure.FileExchange.Api/CZ.Azure.FileExchange.Api.csproj
         arguments: --output api/ --configuration Release
         zipAfterPublish: false
     - script: 'az bicep build --file $(workingDirectory)/main.bicep --outfile $(Build.ArtifactStagingDirectory)/azuredeploy.json'
