--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,31 +18,32 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Build And Deploy
-        id: builddeploy
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v1.9.0
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
-          action: "upload"
-          ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
-          # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_location: "./src/CZ.Azure.FileExchange/" # App source code path
-          api_location: "./src/CZ.Azure.FileExchange.Api/" # Api source code path - optional
-          output_location: "wwwroot/" # Built app content directory - optional
-          ###### End of Repository/Build Configurations ######
-
+          # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x
+          dotnet-version: 6.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --no-restore
+      - name: Publish Frontend
+        run: dotnet publish ./src/CZ.Azure.FileExchange/ -o temp/frontend
+      - name: Publish API
+        run: dotnet publish ./src/CZ.Azure.FileExchange.Api/ -o temp/api
+      - name: Build And Deploy
+        uses: Amadevus/pwsh-script@v2
+        with:
+          script: './build/deploy.ps1 -Token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }} -appBuildOutput ./temp/frontend/wwwroot/ -apiBuildOutput ./temp/api/  -envrionmentName ${{ github.event.number }} -pullrequestTitle "something" -branchName ${{ github.ref_name	}}'
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
     name: Close Pull Request Job
     steps:
-      - name: Close Pull Request
-        id: closepullrequest
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Build And Deploy
+        uses: Amadevus/pwsh-script@v2
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }}
-          action: "close"
+          script: './build/deploy.ps1 -Token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }} -appBuildOutput ./temp/frontend/wwwroot/ -apiBuildOutput ./temp/api/  -envrionmentName ${{ github.event.number }} -pullrequestTitle "something" -branchName ${{ github.ref_name	}} -Delete'
   compile_bicep:
     runs-on: 'ubuntu-latest'
     name: compile main bicep
