--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,19 +55,21 @@ jobs:
     runs-on: ubuntu-latest
     name: Close Pull Request Job
     steps:
-
-     - name: Get PR title
-       id: Pr-Title
-       run: |
-         title=$(gh pr view ${{ github.event.number }} --repo ${{ github.repository }} | head -n 1)
-         echo "::set-output name=pr-title::$(echo $title)"
-       shell: bash
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       continue-on-error: true
-     - name: Deploy
-       run: './build/deploy.ps1 -Token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }} -appBuildOutput ./temp/frontend/wwwroot/ -apiBuildOutput ./temp/api/  -envrionmentName ${{ github.event.number }} -pullrequestTitle "${{steps.Pr-Title.outputs.pr-title}}" -branchName ${{ github.head_ref	}} -Verbose -Delete'
-       shell: pwsh
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Get PR title
+        id: Pr-Title
+        run: |
+          title=$(gh pr view ${{ github.event.number }} --repo ${{ github.repository }} | head -n 1)
+          echo "::set-output name=pr-title::$(echo $title)"
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        continue-on-error: true
+      - name: Deploy
+        run: './build/deploy.ps1 -Token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }} -appBuildOutput ./temp/frontend/wwwroot/ -apiBuildOutput ./temp/api/  -envrionmentName ${{ github.event.number }} -pullrequestTitle "${{steps.Pr-Title.outputs.pr-title}}" -branchName ${{ github.head_ref	}} -Verbose -Delete'
+        shell: pwsh
   compile_bicep:
     runs-on: 'ubuntu-latest'
     name: compile main bicep
