--- a/src/CZ.Azure.FileExchange/CZ.Azure.FileExchange.csproj
+++ b/src/CZ.Azure.FileExchange/CZ.Azure.FileExchange.csproj
@@ -7,14 +7,34 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DartSassBuilder" Version="0.2.1-beta" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
     <PackageReference Include="BlazorDownloadFileFast" Version="0.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all" />
   </ItemGroup>
 
+  <!-- SASS options -->
+  <PropertyGroup>
+    <!-- outputstyle option -->
+    <DartSassOutputStyle>compressed</DartSassOutputStyle>
+    <DartSassOutputStyle Condition="'$(Configuration)' == 'Debug'">expanded</DartSassOutputStyle>
+    <!-- level option -->
+    <DartSassOutputLevel>verbose</DartSassOutputLevel>
+    <!-- msbuild output level -->
+    <DartSassMessageLevel>High</DartSassMessageLevel>
+  </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Client\styles\vendors\" />
+    <!-- add files manually -->
+    <SassFile Include="Client/**/*.scss" />
   </ItemGroup>
+
+  <Target Name="copy_sass_to_the_right_place" AfterTargets="DartSass_Build">
+    <!-- <FindUnderPath Files="main.css" Path="Client/styles/">
+      <Output TaskParameter="InPath" ItemName="FilesFoundInPath" />
+    </FindUnderPath> -->
+    <Move SourceFiles="Client/styles/main.css" DestinationFolder="wwwroot/client/" />
+    <!-- <Message Text="Project File Name = $(FilesFoundInPath)" Importance="High" /> -->
+  </Target>
 
 </Project>
