--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build_and_deploy_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    if: (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
@@ -81,3 +81,7 @@ jobs:
         uses: Azure/bicep-build-action@v1.0.0
         with:
           bicepFilePath: main.bicep
+  setup_main_stage:
+    runs-on: 'ubuntu-latest'
+    name: "setup the stage for the main branch"
+    
