--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,5 +139,5 @@ stages:
               displayName: "Deploy static webapp"
               inputs:
                 filePath: '$(Pipeline.Workspace)/drop/deploy.ps1'
-                arguments: '-Token ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_KINDDUNE004C2C103 }} -appBuildOutput ./temp/frontend/wwwroot/ -apiBuildOutput ./temp/api/ -branchName main -Verbose'
+                arguments: '-Token $(staticWebSiteSecret) -appBuildOutput ./temp/frontend/wwwroot/ -apiBuildOutput ./temp/api/ -branchName main -Verbose'
 
