--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ stages:
   condition: succeeded()
 
   jobs:
-  - deployment: Deploy-Github
+  - deployment: DeployGithub
     displayName: "Deploy - Github Release"
     environment: 'development'
     pool:
@@ -113,7 +113,7 @@ stages:
               tag: $(Build.BuildNumber)
               changeLogCompareToRelease: 'lastFullRelease'
               changeLogType: 'commitBased'
-  - deployment: Deploy-Azure
+  - deployment: DeployAzure
     displayName: "Deploy - Azure Environment"
     environment: 'development'
     pool:
