--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ stages:
         archiveFile: $(Build.ArtifactStagingDirectory)/API.zip
         archiveType: zip
         includeRootFolder: false
-        rootFolderOrFile: $(workingDirectory)/api/CZ.Azure.FileExchange.API/
+        rootFolderOrFile: $(workingDirectory)/api/CZ.Azure.FileExchange.Api/
         replaceExistingArchive: true
     - task: CopyFiles@2
       displayName: "copy deploy script to the artifact bundle"
