--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -146,4 +146,4 @@ stages:
                 displayName: "Deploy static webapp"
                 inputs:
                   filePath: '$(Pipeline.Workspace)/drop/deploy.ps1'
-                  arguments: '-Token $(staticWebSiteSecret) -appBuildOutput $(Pipeline.Workspace)/drop/Frontend.zip -apiBuildOutput $(Pipeline.Workspace)/drop/API.zip -branchName main -workingDir $(Pipeline.Workspace) -Verbose'
+                  arguments: '-Token $(staticWebSiteSecret) -appBuildOutput $(Pipeline.Workspace)/drop/Frontend.zip -apiBuildOutput $(Pipeline.Workspace)/drop/API.zip -branchName main -Verbose'
